@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19931105
+MANIFEST for ded, version t19931117
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
